[tool.poetry]
name = "nbnpy"
version = "0.4.1"
description = "Unofficial NBN API wrapper"
authors = ["Yass"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/diabolical-ninja/nbnpy"
documentation = "https://nbnpy.readthedocs.io"


[tool.poetry.dependencies]
python = "^3.8"
httpx = "^0.23.0"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
codecov = "^2.1.12"
darglint = "^1.8.1"
flake8 = "^4.0.1"
flake8-annotations = "^2.9.0"
flake8-bandit = "^3.0.0"
flake8-black = "^0.3.3"
flake8-bugbear = "^22.4.25"
flake8-docstrings = "^1.6.0"
flake8-import-order = "^0.18.1"
flake8-quotes = "^3.3.1"
flake8-requirements = "^1.5.3"
mypy = "^0.960"
nox = "^2022.1.7"
pep8-naming = "^0.13.0"
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
pytest-xdist = "^2.5.0"
safety = "^1.10.3"
types-requests = "^2.27.30"
coverage = {extras = ["toml"], version = "^6.4.1"}
xdoctest = "^1.0.0"
Sphinx = "4.5"
myst-parser = "^0.17.2"
sphinx-autodoc-typehints = "^1.18.2"
furo = "^2022.6.4"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
source = ['src/']
branch = true

[tool.coverage.report]
fail_under = 100
show_missing = true

[tool.mypy]
files = ["src/", "tests/"]
disallow_untyped_defs = true
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true
